--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
     <header>
         <div class="container nav-flex">
-            <img src="https://i.imgur.com/clnqRC2.png" alt="Logo Eunoia" class="logo-nav">
+            <src="logo.png" alt="Logo Eunoia" class="logo-nav">
             <nav>
                 <ul>
                     <li><a href="#product">Curso</a></li>
@@ -207,7 +207,7 @@
         <div class="blob blob-2"></div>
         
         <div class="container hero-content">
-            <img src="https://i.imgur.com/clnqRC2.png" alt="Prisma Logo Animado" class="hero-main-logo">
+            <src="logo.png" alt="Prisma Logo Animado" class="hero-main-logo">
             
             <h1>Eunoia Playbooks:<br>Creación para mentes que piensan diferente</h1>
             <h2>Playbooks y Cursos</h2>
@@ -284,3 +284,4 @@
     </script>
 </body>
 </html>
+
