--- a/index2.html
+++ b/index2.html
@@ -21,22 +21,23 @@
 
     <div class="success-card">
         <div class="confetti">✨🥳✨</div>
-        <img src="https://i.imgur.com/clnqRC2.png" alt="Eunoia Logo" class="logo">
+        <img src="logo.png" alt="Eunoia Logo" class="logo">
         <h1>¡Ya eres un Prisma!</h1>
         <p>Gracias por tu compra. Tu camino hacia una educación transformada comienza aquí.</p>
 
         <div class="download-box">
             <h3>Tu Material Educativo</h3>
-            <p>Haz clic abajo para acceder a tu Playbook y los materiales del curso.</p>
+            <p>Haz clic abajo para acceder a tus Playbooks y los materiales del curso.</p>
             
             <a href="#" class="btn-download" target="_blank">📥 DESCARGAR PLAYBOOK</a>
         </div>
 
         <p style="margin-top: 30px; font-size: 0.9rem; opacity: 0.7;">
             Se ha enviado un recibo a tu correo. <br>
-            Si tienes problemas con la descarga, escríbenos a: <strong>hola@eunoiaplaybooks.com</strong>
+            Si tienes problemas con la descarga, escríbenos a: <strong>eunoiaplaybooks@gmail.com</strong>
         </p>
     </div>
 
 </body>
+
 </html>
