--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="container">
             <article class="featured-card">
                 <div class="card-image-area">
-                    <img src="El docente prisma y las 5 Cs.png' viewBox='0 0 24 24' fill='%234A90E2' width='80' height='80'%3E%3Cpath d='M12 3L1 9l11 6 9-4.91V17h2V9M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82z'/%3E%3C/svg%3E" alt="Icono Curso">
+                    <img src="El docente prisma y las 5 Cs.png" viewBox='0 0 24 24' fill='%234A90E2' width='80' height='80'%3E%3Cpath d='M12 3L1 9l11 6 9-4.91V17h2V9M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82z'/%3E%3C/svg%3E" alt="Icono Curso">
                 </div>
                 
                 <h3>Curso Online</h3>
@@ -284,6 +284,7 @@
     </script>
 </body>
 </html>
+
 
 
 
